--- a/function/requirements.txt
+++ b/function/requirements.txt
@@ -52,7 +52,10 @@ demjson==2.2.4
 distributed==2.5.2
 dj-database-url==0.5.0
 Django==2.1.15
+django-admin-rangefilter==0.6.3
 django-allauth==0.43.0
+django-bower==5.2.0
+django-scheduler==0.9.3
 django-suit==0.2.28
 docutils==0.15.2
 entrypoints==0.3
@@ -78,6 +81,7 @@ h5py==2.9.0
 HeapDict==1.0.1
 holidays==0.9.12
 html5lib==1.0.1
+icalendar==4.0.7
 idna==2.8
 imageio==2.6.0
 imagesize==1.1.0
@@ -183,6 +187,7 @@ Pygments==2.4.2
 PyJWT==1.7.1
 pylint==2.4.2
 PyMeeus==0.3.7
+PyMySQL==0.10.1
 pyodbc==4.0.27
 pyOpenSSL==19.0.0
 pyparsing==2.4.2
