fix static files dir

--- a/function/function/.config/nginx/function.conf
+++ b/function/function/.config/nginx/function.conf
@@ -8,4 +8,8 @@ server {
         uwsgi_pass  unix:///tmp/function.sock;
         include     uwsgi_params;
     }
+
+    location /static/ {
+        alias /srv/DB_is_Free-Hotel_DB_System/function/staticfiles/;
+    }
 }
