fix nginx settings

--- a/function/function/.config/nginx/function.conf
+++ b/function/function/.config/nginx/function.conf
@@ -9,7 +9,7 @@ server {
         include     uwsgi_params;
     }
 
-    location /static/ {
+    location /static {
         alias /srv/DB_is_Free-Hotel_DB_System/function/static/;
     }
 }
